fix(UI): #71 Remove collapse feature from left-sidebars & bars fixed/reorganize layout
* fix(UI): #63- Side menus overflow-y

* #63 - Reorganize layout structure

* #63 - Remove legend nav button

* #63 - Pull contextSwitch to right of navbar

* #63 - Fix x-overflow

* #63 - Make sidebar scrollable

* #63 - Make namespace filtering a collapsible pull-right navbar

--- a/Desktop/wwwroot/css/site.css
+++ b/Desktop/wwwroot/css/site.css
@@ -47,6 +47,15 @@ app {
     text-overflow: ellipsis;
 }
 
+.pt-6, .py-6 {
+    padding-top: 4.5rem !important;
+}
+
+.r-0
+{
+    right: 0;
+}
+
 .sidebar {
     
 }
@@ -272,4 +281,11 @@ app {
 .monaco-editor-container
 {
     height: 100%;
+}
+
+
+.scroll-y
+{
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
